<resources>
    <string name="app_name">Blacklist Blocker</string>
    <string name="Open_navigation_drawer">Open navigation drawer</string>
    <string name="Close_navigation_drawer">Close navigation drawer</string>
    <string name="Settings_action">Settings</string>
    <string name="Calls_blocking">Calls blocking</string>
    <string name="Calls_blocking_notification">Calls blocking notification</string>
    <string name="App_interface">Application interface</string>
    <string name="Text_folding">Text folding</string>
    <string name="Journal_SMS_text_folding">Show folded SMS-text in the Event log</string>
    <string name="App_data">Application data</string>
    <string name="Export_data">Export data</string>
    <string name="Write_data_into_external">Write application data into external file</string>
    <string name="Import_data">Import data</string>
    <string name="Load_data_from_external">Load application data from external file</string>
    <string name="File_path">File path</string>
    <string name="Block_calls_from_black_list">Block calls from numbers that are in the Blacklist</string>
    <string name="All_calls">All calls</string>
    <string name="Block_all_calls">Block all calls (except calls from numbers that are in the Whitelist)</string>
    <string name="Block_calls_not_from_contacts">Block calls from numbers that are not in the Contact list</string>
    <string name="Block_calls_not_from_SMS_list">Block calls from numbers that are not in the SMS list</string>
    <string name="Block_calls_from_private">Block calls from private numbers</string>
    <string name="Write_calls_to_journal">Write blocked calls to the Event log</string>
    <string name="Remove_from_call_log">Remove blocked calls from the Call log</string>
    <string name="Notify_in_status_bar_blocked_call">Notify in status bar about blocked call</string>
    <string name="Notify_with_sound_blocked_call">Notify with sound about blocked call</string>
    <string name="Notify_with_vibration_blocked_call">Notify with vibration about blocked call</string>
    <string name="Block_SMS_from_black_list">Block SMS from numbers that are in the Blacklist</string>
    <string name="All_SMS">All SMS</string>
    <string name="Block_all_SMS">Block all SMS (except SMS from numbers that are in the Whitelist)</string>
    <string name="Contacts_list">Contact list</string>
    <string name="Block_SMS_not_from_contacts">Block SMS from numbers that are not in the Contact list</string>
    <string name="SMS_list">SMS list</string>
    <string name="Block_SMS_not_from_SMS_list">Block SMS from numbers that are not in the SMS list</string>
    <string name="Private_numbers">Private numbers</string>
    <string name="Block_SMS_from_private">Block SMS from private numbers</string>
    <string name="Status_bar">Status bar</string>
    <string name="Notify_in_status_bar_blocked_SMS">Notify in status bar about blocked SMS</string>
    <string name="Notify_with_sound_received_SMS">"Notify with sound about received SMS"</string>
    <string name="Sound">"Sound"</string>
    <string name="Notify_with_sound_blocked_SMS">"Notify with sound about blocked SMS"</string>
    <string name="Notify_with_vibration_received_SMS">"Notify with vibration about received SMS"</string>
    <string name="Vibration">"Vibration"</string>
    <string name="Notify_with_vibration_blocked_SMS">"Notify with vibration about blocked SMS"</string>
    <string name="SMS_delivery">SMS delivery</string>
    <string name="Notify_on_SMS_delivery">Notify about SMS delivery</string>
    <string name="Write_SMS_to_journal">Write blocked SMS to the Event log</string>
    <string name="SMS_blocking">SMS blocking</string>
    <string name="SMS_blocking_notification">SMS blocking notification</string>
    <string name="SMS_receiving_notification">SMS receiving notification</string>
    <string name="Select_address_book">Select address book</string>
    <string name="From_contacts_list">From the Contact list</string>
    <string name="From_calls_list">From the Call log</string>
    <string name="From_SMS_list">From the SMS list</string>
    <string name="From_Black_list">From the Blacklist</string>
    <string name="From_White_list">From the Whitelist</string>
    <string name="Manually">Manually</string>
    <string name="List_of_contacts">Contact list</string>
    <string name="List_of_calls">Call log</string>
    <string name="List_of_SMS">SMS list</string>
    <string name="Black_list">Blacklist</string>
    <string name="White_list">Whitelist</string>
    <string name="Journal">Event log</string>
    <string name="Settings">Settings</string>
    <string name="Information">Information</string>
    <string name="Exit">Exit</string>
    <string name="Call_log">Call log</string>
    <string name="Messaging">Messaging</string>
    <string name="Select_all">Select all</string>
    <string name="SELECT_ALL">SELECT ALL</string>
    <string name="DELETE">DELETE</string>
    <string name="CANCEL">CANCEL</string>
    <string name="ADD">ADD</string>
    <string name="OK">OK</string>
    <string name="Add_contact">Add a contact</string>
    <string name="Add_number">Add a number</string>
    <string name="Adding_contact">Adding a contact</string>
    <string name="Saving_">Saving...</string>
    <string name="Loading_">Loading...</string>
    <string name="call_is_blocked">call is blocked</string>
    <string name="message_is_blocked">message is blocked</string>
    <string name="message_is_received">message is received</string>
    <string name="Private_number">Private number</string>
    <string name="Search_action">Search</string>
    <string name="Filter_by_group">Filter by group</string>
    <string name="All">All</string>
    <string name="Starts_with">Starts with:</string>
    <string name="Ends_with">Ends with:</string>
    <string name="Contains">Contains:</string>
    <string name="No_text">No text</string>
    <string name="Contact_name_">Contact name:</string>
    <string name="Contact_name_nn">Not necessary</string>
    <string name="Phone_number">Phone number</string>
    <string name="Enter_phone_number">Enter phone number</string>
    <string name="Add_another">Add another</string>
    <string name="Unnamed">Unnamed</string>
    <string name="Edit_contact">Edit contact</string>
    <string name="Editing_contact">Contact editing</string>
    <string name="SAVE">SAVE</string>
    <string name="Delete_record">Delete record</string>
    <string name="Copy_number">Copy number</string>
    <string name="Copy_text">Copy text</string>
    <string name="Remove_contact">Remove contact</string>
    <string name="Find_similar_records">Find similar records</string>
    <string name="Exclude_from_black_list">Exclude contact from the Blacklist</string>
    <string name="Move_to_white_list">Move contact to the Whitelist</string>
    <string name="Move_to_black_list">Move contact to the Blacklist</string>
    <string name="Default_SMS_app">Default SMS-app</string>
    <string name="Set_as_default_SMS_app">Set as default SMS-app is needed to block SMS since Android 4.4 and up</string>
    <string name="SMS_default_app">SMS application</string>
    <string name="New_message">New message</string>
    <string name="needs_permission">needs permission</string>
    <string name="needs_permissions">needs permissions</string>
    <string name="Delete_thread">Delete thread</string>
    <string name="Write_message">Write message</string>
    <string name="Add_from_contacts">Add from contacts</string>
    <string name="Enter_message">Enter message</string>
    <string name="Send">Send</string>
    <string name="Delete_message">Delete message</string>
    <string name="Copy_message">Copy message</string>
    <string name="Forward_message">Forward message</string>
    <string name="Copied_to_clipboard">Copied to clipboard</string>
    <string name="SMS_is_sent">SMS is sent</string>
    <string name="Generic_failure">Error: generic failure</string>
    <string name="No_service">Error: no service</string>
    <string name="Null_PDU">Error: null PDU</string>
    <string name="Radio_off">Error: radio is off</string>
    <string name="SMS_is_delivered">SMS is delivered</string>
    <string name="SMS_is_not_delivered">SMS isn not delivered</string>
    <string name="Message_text_is_not_defined">Message text is not defined</string>
    <string name="Address_is_not_defined">Address is not defined</string>
    <string name="Need_default_SMS_app">Need default SMS-application permissions</string>
    <string name="Unknown_error">Unknown error</string>
    <string name="Ringtone_picker">Ringtone picker</string>
    <string name="Menu_button">Menu button</string>
    <string name="Error_file_already_exists">Error: file already exists</string>
    <string name="Error_invalid_file_path">Error: invalid file path</string>
    <string name="Error_on_file_path_creating">Error on file path creating</string>
    <string name="Error_on_file_writing">Error on file writing</string>
    <string name="Export_complete">Export complete</string>
    <string name="Error_file_is_not_valid">Error: file isn\'t valid</string>
    <string name="Error_on_old_data_deletion">Error on old data deletion</string>
    <string name="Import_complete">Import complete</string>
    <string name="UI_theme_dark">Dark UI theme</string>
    <string name="List_is_empty">List is empty</string>
    <string name="Logo_motto">Protection from unwanted \n calls and SMS</string>
    <string name="Go_to_Journal_at_start">Go to the Event log at the application start</string>
    <string name="Exit_on_back_pressed">Do not exit the application on the phone\'s \"Back\" button pressed</string>
    <string name="Back_button">\"Back\" button</string>
    <string name="Sending_">Sending...</string>
    <string name="Not_sent">Not sent</string>
    <string name="To_block_SMS_set_def_app">To block SMS-messages set as \"Default SMS-app\" in the Settings</string>
    <string name="By_default">By default</string>
    <string name="Choose_SIM">Choose a SIM-card</string>
    <string name="Chosen_SIM">Chosen SIM-card</string>
    <string name="SIM_card">SIM-card</string>
    <string name="About">About</string>
    <string name="Info_about">
        This is a free application that gives you a convenient way of configure
        the blocking of unwanted calls and SMS. It supports the light and
        dark UI themes, has no ads and is provided with open source code.
    </string>
    <string name="Attention">Attention</string>
    <string name="Info_attention">
        Because of the security policy in Android 4.4 and up
        to block the incoming SMS-messages it is required to give to the
        application the permissions of \"Default SMS-application\" in the Settings.
        If necessary, you can always opt-out and return to the previous
        \"Default SMS-application\". In this case, the SMS blocking will be
        disabled. At the moment the application supports blocking and exchanging
        SMS-messages only. Support the MMS-messages has not yet been implemented.

        \nBecause of the security policy in Android 6.0 and up, the
        application requires permissions:
        \n1. \"Access photos, media and files\". Allows reading and writing
        files in the internal memory of the device - for storing the block lists.
        \n2. \"Send and view SMS-messages\". Allows to display and block
        incoming SMS-messages.
        \n3. \"Make and manage phone calls\". Allows to block incoming calls.
        \n4. \"Access contacts\". Allows to display the list of contacts.
    </string>
    <string name="Info_messaging">
        This list displays SMS-chats, sorted by the time of the last message in
        them. From here you can go to the reading, writing and sending SMS-messages.
    </string>
</resources>