<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/Search_action"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:visible="false"/>

    <item
        android:id="@+id/write_message"
        android:icon="@drawable/ic_write_message"
        android:title="@string/Write_message"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:title="@string/ADD"
        app:showAsAction="ifRoom"
        android:visible="false"/>
</menu>
