<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindow"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTitleBackground"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:paddingRight="4dp"
                android:paddingEnd="4dp"
                android:paddingBottom="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="6dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:text="@string/Contact_name_"
                        android:textColor="@color/colorText" />

                </LinearLayout>

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_edit_text"
                    android:hint="@string/Contact_name_nn"
                    android:maxLength="100"
                    android:padding="3dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_number_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/view_add_another"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/selector_control">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/Add_another" />

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:contentDescription="@string/Add_contact"
                    android:src="@drawable/ic_add"
                    android:tint="@color/colorAccent" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <include
        layout="@layout/row_3_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
