<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kaliturin.blacklist.AddContactsMenuFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/add_from_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/selector_control"
                android:focusable="true"
                android:clickable="true"
                android:padding="8pt">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/From_contacts_list"
                    android:textColor="@color/colorText"
                    android:textSize="20sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBorder" />

            <LinearLayout
                android:id="@+id/add_from_calls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/selector_control"
                android:focusable="true"
                android:clickable="true"
                android:padding="8pt">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/From_calls_list"
                    android:textColor="@color/colorText"
                    android:textSize="20sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBorder" />

            <LinearLayout
                android:id="@+id/add_from_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/selector_control"
                android:focusable="true"
                android:clickable="true"
                android:padding="8pt">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/From_SMS_list"
                    android:textColor="@color/colorText"
                    android:textSize="20sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBorder" />

            <LinearLayout
                android:id="@+id/add_manually"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/selector_control"
                android:focusable="true"
                android:clickable="true"
                android:padding="8pt">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Manually"
                    android:textColor="@color/colorText"
                    android:textSize="20sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBorder" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
