<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kaliturin.blacklist.SMSSendFragment">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="2dp"
            android:paddingLeft="8dp"
            android:paddingRight="2dp"
            android:paddingStart="8dp">

            <LinearLayout
                android:id="@+id/contacts_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="2dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingTop="6dp">

                    <EditText
                        android:id="@+id/edit_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selector_edit"
                        android:hint="@string/Phone_number"
                        android:inputType="phone"
                        android:maxLength="100"
                        android:padding="3dp"
                        android:textColorHint="?colorTextSecondary">

                        <requestFocus />
                    </EditText>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="8dp" />

                    <EditText
                        android:id="@+id/text_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?selector_edit"
                        android:gravity="top|start"
                        android:hint="@string/Message"
                        android:inputType="textCapSentences|textMultiLine"
                        android:minLines="5"
                        android:padding="3dp"
                        android:textColorHint="?colorTextSecondary" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/button_add_number"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/Add_contact"
                            android:src="@drawable/ic_add"
                            android:tint="?colorAccent" />

                        <ImageButton
                            android:id="@+id/button_add_contact"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/Add_contact"
                            android:src="@drawable/ic_contact"
                            android:tint="?colorAccent" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom|end"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_message_length"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="160/1" />

                        <Button
                            android:id="@+id/button_send"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minHeight="40dp"
                            android:minWidth="0dp"
                            android:text="@string/Send"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
